# rs-docker-networks2arrow-ipc

./: Cargo.toml  README.md  example.sh  rs-docker-networks2arrow-ipc
src/: lib.rs  main.rs
