[package]
name = "rs-docker-networks2arrow-ipc"
version = "0.1.0"
edition = "2024"

description = "Docker networks to Arrow IPC CLI"
license = "Apache-2.0"
repository = "https://github.com/takanoriyanagitani/rs-docker-networks2arrow-ipc"
homepage = "https://github.com/takanoriyanagitani/rs-docker-networks2arrow-ipc"
documentation = "https://docs.rs/rs-docker-networks2arrow-ipc/latest"
keywords = ["docker", "network", "arrow", "ipc", "stream"]
categories = ["command-line-utilities"]

exclude = [
	"rs-docker-networks2arrow-ipc",
]

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"

[dependencies.bollard]
version = "0"
default-features = false
features = [
	"http",
	"pipe",
]

[dependencies.clap]
version = "4"
features = ["derive"]

[dependencies.arrow]
version = "57"
default-features = false
features = [
	"ipc",
]

[dependencies.tokio]
version = "1"
default-features = false
features = [
	"macros",
	"rt-multi-thread",
]
